objects/Surveys__c.object
<CustomObject>
    <description>Syndicate and other surveys</description>
    <fields>
        <fullName>Ability_to_fund_in_Africa_hedged__c</fullName>
        <description>What is your ability to fund in local currency in these geographies, would this be hedged?</description>
        <label>Funding ability in Africa - (hedged)?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>African_countries_where_you_operate__c</fullName>
        <label>African countries where you operate</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Africa_only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <formula>Relationship_Group__r.Name</formula>
        <label>Bank Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Syndicate_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Countries_you_would_avoid__c</fullName>
        <label>Countries you would avoid</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Africa_only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Insurance_employed_in_Africa__c</fullName>
        <label>Credit Insurance employed in Africa?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Ratings_or_geoPolitics_deter_lending__c</fullName>
        <label>Do Ratings or Geopolitics deter lending?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_an_English_law_requirement__c</fullName>
        <label>Do you have an English law requirement?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_lend_to_FIs__c</fullName>
        <label>Do you lend to FIs?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_lend_to_Sovereigns__c</fullName>
        <label>Do you lend to Sovereigns?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_underwrite_in_Africa__c</fullName>
        <label>Do you underwrite in Africa?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_use_CDS_to_hedge_African_position__c</fullName>
        <label>Are CDS used to hedge African positions?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ECAlinked_finance_sectors_if_applicable__c</fullName>
        <label>ECA-linked finance sectors if applicable</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Oil and Gas</fullName>
                </value>
                <value>
                    <fullName>Power</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Telcos</fullName>
                </value>
                <value>
                    <fullName>Tourism</fullName>
                </value>
                <value>
                    <fullName>Trade Finance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EUR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GBP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GBP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>General_Comments_Areas_of_Focus__c</fullName>
        <label>General Comments - Areas of Focus</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>General_Comments_Returns__c</fullName>
        <label>General Comments - Returns</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>General_Comments_Risk_Management__c</fullName>
        <label>General Comments - Risk Management</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LCY_Description__c</fullName>
        <label>LCY Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AOA - Angolan kwanza</fullName>
                </value>
                <value>
                    <fullName>BWP - Botswana pula</fullName>
                </value>
                <value>
                    <fullName>XOF - West African CFA franc</fullName>
                </value>
                <value>
                    <fullName>EGP - Egyptian pound</fullName>
                </value>
                <value>
                    <fullName>ETB - Ethiopian birr</fullName>
                </value>
                <value>
                    <fullName>GHS - Ghanaian cedi</fullName>
                </value>
                <value>
                    <fullName>KES - Kenyan shilling</fullName>
                </value>
                <value>
                    <fullName>MUR - Mauritian rupee</fullName>
                </value>
                <value>
                    <fullName>MZN - Mozambican metical</fullName>
                </value>
                <value>
                    <fullName>NAD - Namibian dollar</fullName>
                </value>
                <value>
                    <fullName>NGN - Nigerian naira</fullName>
                </value>
                <value>
                    <fullName>RWF - Rwandan franc</fullName>
                </value>
                <value>
                    <fullName>ZAR - South African rand</fullName>
                </value>
                <value>
                    <fullName>TZS - Tanzanian shilling</fullName>
                </value>
                <value>
                    <fullName>UGX - Ugandan shilling</fullName>
                </value>
                <value>
                    <fullName>DZD - Algerian dinar</fullName>
                </value>
                <value>
                    <fullName>BIF - Burundi franc</fullName>
                </value>
                <value>
                    <fullName>XAF - Central African CFA franc</fullName>
                </value>
                <value>
                    <fullName>CVE - Cape Verdean escudo</fullName>
                </value>
                <value>
                    <fullName>KMF - Comorian franc</fullName>
                </value>
                <value>
                    <fullName>CDF - Congolese franc</fullName>
                </value>
                <value>
                    <fullName>DJF - Djiboutian franc</fullName>
                </value>
                <value>
                    <fullName>ERN - Eritrean nakfa</fullName>
                </value>
                <value>
                    <fullName>GMD - Gambian dalasi</fullName>
                </value>
                <value>
                    <fullName>GNF - Guinean franc</fullName>
                </value>
                <value>
                    <fullName>LSL - Lesotho loti</fullName>
                </value>
                <value>
                    <fullName>LRD - Liberian dollar</fullName>
                </value>
                <value>
                    <fullName>LYD - Libyan dinar</fullName>
                </value>
                <value>
                    <fullName>MGA - Malagasy ariary</fullName>
                </value>
                <value>
                    <fullName>MWK - Malawian kwacha</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCY__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LCY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Limit_on_of_deal__c</fullName>
        <label>Limit on % of deal</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min_margin_fees_for_African_asset__c</fullName>
        <label>Min margin/fees for African assets</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_return_Equity__c</fullName>
        <inlineHelpText>Insert required %</inlineHelpText>
        <label>Minimum return required - Equity</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Minimum_return_required_Mezzanine__c</fullName>
        <label>Minimum return required - Mezzanine</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Minimum_return_requirement_for_Bonds__c</fullName>
        <inlineHelpText>Insert  return requirement if you would consider this type of funding</inlineHelpText>
        <label>Minimum return required - Bonds</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Next_Meeting_Date__c</fullName>
        <label>Next Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_go_Sectors_in_Africa__c</fullName>
        <label>No-go Sectors in Africa</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Oil and Gas</fullName>
                </value>
                <value>
                    <fullName>Power</fullName>
                </value>
                <value>
                    <fullName>Real estate</fullName>
                    <label>Real Estate</label>
                </value>
                <value>
                    <fullName>Telcos</fullName>
                </value>
                <value>
                    <fullName>Tourism</fullName>
                </value>
                <value>
                    <fullName>Trade Finance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunities_to_pursue__c</fullName>
        <label>Opportunities to pursue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_African__c</fullName>
        <label>Other African Countries considered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Africa_only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participate_in_Bond_issues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Participate in Bond issues?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParticipateinEquity_Funding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Participate in Equity Funding?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParticipateinMezzanine_Funding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Participate in Mezzanine Funding?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portfolio_managed_via_secondary_market__c</fullName>
        <label>Portfolio managed via secondary market?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority_Sectors_in_Africa__c</fullName>
        <label>Priority Sectors in Africa</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Oil and Gas</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PF</fullName>
                </value>
                <value>
                    <fullName>Power</fullName>
                </value>
                <value>
                    <fullName>Real estate</fullName>
                </value>
                <value>
                    <fullName>Telcos</fullName>
                </value>
                <value>
                    <fullName>Tourism</fullName>
                </value>
                <value>
                    <fullName>Trade Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recent_deal_successes__c</fullName>
        <label>Recent deal successes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_Group__c</fullName>
        <label>Relationship Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Syndicate_Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sectors_considered_for_PF_if_applicable__c</fullName>
        <label>Sectors considered for PF if applicable</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Oil and Gas</fullName>
                </value>
                <value>
                    <fullName>Power</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Telcos</fullName>
                </value>
                <value>
                    <fullName>Tourism</fullName>
                </value>
                <value>
                    <fullName>Trade Finance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Single_borrower_lending_limit__c</fullName>
        <label>Single borrower lending limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subsidiaries_in_African_Countries__c</fullName>
        <label>Subsidiaries in African Countries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Africa_only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <label>Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tenor_Threshold__c</fullName>
        <label>Tenor Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timing_of_business_risk_committees__c</fullName>
        <description>Timing of business and risk committees (relevant for African Banks, DFI&apos;s)?</description>
        <inlineHelpText>Timing of business and risk committees (relevant for African Banks, DFI&apos;s)?</inlineHelpText>
        <label>Timing of business/risk committees</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Typical_Ticket_Size__c</fullName>
        <label>Typical Ticket Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>USD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>What_is_your_impression_of_ABSA__c</fullName>
        <label>What is your impression of ABSA</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Willing_to_form_consortia_joint_bids__c</fullName>
        <label>Willing to form consortia/joint bids?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ZAR</label>
        <type>Checkbox</type>
    </fields>
    <label>Survey</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <recordTypes>
        <fullName>General_Survey</fullName>
        <active>true</active>
        <label>General Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>Syndicate_Bank_Survey</fullName>
        <active>true</active>
        <label>Syndicate Bank Survey</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>